// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunsAndArchive renders archive page 1`] = `
<div
  className="page"
>
  <MD2Tabs
    onSwitch={[Function]}
    selectedTab={1}
    tabs={
      Array [
        "Active",
        "Archived",
      ]
    }
  />
  <EnhancedArchivedRuns
    history={Object {}}
    location=""
    match=""
    toolbarProps={Object {}}
    updateBanner={[Function]}
    updateDialog={[MockFunction]}
    updateSnackbar={[MockFunction]}
    updateToolbar={[Function]}
    view={1}
  />
</div>
`;

exports[`RunsAndArchive renders runs page 1`] = `
<div
  className="page"
>
  <MD2Tabs
    onSwitch={[Function]}
    selectedTab={0}
    tabs={
      Array [
        "Active",
        "Archived",
      ]
    }
  />
  <EnhancedAllRunsList
    history={Object {}}
    location=""
    match=""
    toolbarProps={Object {}}
    updateBanner={[Function]}
    updateDialog={[MockFunction]}
    updateSnackbar={[MockFunction]}
    updateToolbar={[Function]}
    view={0}
  />
</div>
`;
